cmake_minimum_required(VERSION 2.6)
project(random_md5s)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
include_directories(/usr/local/include/)
link_directories(/usr/local/lib/)
add_executable(random_md5s random_md5s.cpp)
target_link_libraries(random_md5s cryptopp)
